log
Sun, May 18, 2025 12:38:39 AM: 
 sudoku.c | 7 +++++++
 1 file changed, 7 insertions(+)
Compilation failed
test.c:7:8: error: '_strdup' redeclared without dllimport attribute: previous dllimport ignored [-Werror=attributes]
    7 | char * _strdup(const char * str) {
      |        ^~~~~~~
cc1.exe: all warnings being treated as errors
3f0e54c
Sun, May 18, 2025 12:39:07 AM: 
 tests:  1|4
total_score: 10/70
9a4b1e5
Sun, May 18, 2025 12:53:31 AM: 
 sudoku.c | 16 ++++++++++++++++
 1 file changed, 16 insertions(+)
Compilation failed
In file included from test.c:5:
sudoku.c: In function 'is_valid':
sudoku.c:50:9: warning: variable 'numVisto' set but not used [-Wunused-but-set-variable]
   50 |     int numVisto[10];
      |         ^~~~~~~~
sudoku.c:55:23: error: 'i' undeclared (first use in this function)
   55 |     int num = n->sudo[i][k];
      |                       ^
sudoku.c:55:23: note: each undeclared identifier is reported only once for each function it appears in
sudoku.c:57:10: error: 'numVisto' undeclared (first use in this function)
   57 |       if(numVisto[num] == 1){
      |          ^~~~~~~~
test.c: At top level:
test.c:7:8: warning: '_strdup' redeclared without dllimport attribute: previous dllimport ignored [-Wattributes]
    7 | char * _strdup(const char * str) {
      |        ^~~~~~~
43eb412
